# biographyScraping

./: .gitignore  LICENSE  MODULES_DOCUMENTATION.md  README.md  api_server.py  batch_process.py  citation_fetcher.py  convert_webp.py  deep_scraper.py  download_photos.py  embedding_tool.py  famous_people_list.txt  main.py  models.json  models.json.template  perplexity_tool.py  pyproject.toml  remaining_75_celebrities.txt  requirements.txt  scrape_oprah.py  scrape_wikipedia.py  selected_10_celebrities.txt  selected_50_celebrities.txt  stage1_scrape.py  stage2_embed.py  stage3_query.py  test_raw_perplexity.py  test_workflow.py
data/celebrities/oprah_winfrey/: scrape_summary.json  source_1.txt
docs/: WORKFLOW.md
frontend/: index.html  script.js  style.css
tests/: test_embedding.py  test_structured.py  test_workflow.py
