[project]
name = "biographyscraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polyagent>=1.2.1",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "anthropic>=0.40.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "numpy>=1.26.0",
]
